<resources>
    <string name="app_name">Nicdao_Exer02</string>
    <string name="title_text">Which Marvel Character Are You?</string>
    <string name="marvel_logo">The Marvel Logo</string>
    <string name="start_button">START</string>
    <string name="retry_button">RETRY</string>
    <string name="bio">FIND OUT THE INNER HERO IN YOU</string>
    <string name = "antman">Scott Edward Harris Lang is a former criminal
        who had been convinced by Hank Pym to take on the mantle as Ant Man,
        in order for them to then prevent Darren Cross from attempting to manipulate
        the Pym Particles to create extremely weapons, which he would then sell to
        HYDRA and the Ten Rings. Lang was trained up by Hope van Dyne and Pym to
        master the Ant-Man technology, before he was sent to steal the Yellowjacket
        Suit from Cross. However, their plan was uncovered by Cross, who managed to
        kidnap Lang's daughter, resulting with a final fight where Ant-Man defeated Cross
        by sending them both to the Quantum Realm. Ant-Man was able to survive the journey
        into the Quantum Realm, giving Pym hope that his wife could be saved as Lang returned
        into his old life, only to be told that the Avengers had learnt of him and began seeking him out.</string>
    <string name = "blackpanther">T'Challa is the King of Wakanda and first son of
        T'Chaka and Ramonda. As the Wakandan monarch, he became the holder
        of the Black Panther mantle. Following the death of his father in the
        bombing attack orchestrated by Helmut Zemo, T'Challa had set out to kill
        the Winter Soldier, who was widely believed to be responsible for the attack.
        During his attempt to find the Winter Soldier, Black Panther had joined a Civil
        War between the Avengers, where he sided with Iron Man. However, Black Panther
        eventually learned that Zemo was really the one who had been responsible for his
        father's demise, as he captured Zemo, handing him over to Everett Ross, while he
        also vowed never to allow desires of vengeance to consume him again.</string>
    <string name = "blackwidow">Natalia Alianovna "Natasha" Romanoff, also known as Black Widow, was
        one of the most talented spies and assassins in the entire world and a founding member of the
        Avengers. Originally a KGB operative and dangerous assassin, Romanoff was recruited into S.H.I.E.L.D.
        by Clint Barton.</string>
    <string name="captainamerica">Captain Steven Grant "Steve" Rogers is a World War II veteran,
        a founding member of the Avengers, and Earth's first superhero. Rogers had suffered from
        numerous health problems, and upon America's entry into World War II, was rejected from the
        service within United States Army despite several attempts to enlist. Rogers was the only
        recipient of the Super Soldier Serum developed by Abraham Erskine under the Strategic Scientific
        Reserve. Determined to serve, Rogers ultimately volunteered for the Project Rebirth, which enhanced
        the frail Rogers' body to the peak of human physicality. Mistrusted by Chester Phillips, the head
        of the SSR, Rogers was relegated to propaganda campaigns, and was given the new moniker of Captain America.
        Rogers later joined the war with a combat role after he single-handedly liberated captured Allied
        prisoners of war.</string>
    <string name="drstrange">Stephen Vincent Strange M.D., Ph.D is a powerful sorcerer and Master of
        the Mystic Arts. Originally a brilliant, although arrogant, neurosurgeon, Strange got into a car
        accident which resulted with his hands becoming crippled. When all Western medicine failed him,
        Strange embarked on a journey that led him into Kamar-Taj where Strange had made the discovery of
        magic and alternate dimensions, being trained by the Ancient One. Though focused on healing his
        hands and returning into his career, Strange learned more of the mystic arts and helped the Masters
        prevent Kaecilius from merging the Earth with the Dark Dimension, but not before witnessing the Ancient
        One's death. Following the demise of their mentor, Strange became the protector of the New York Sanctum
        in New York as well as the Earth's protector from any new inter-dimensional threats.</string>
    <string name = "hulk">Robert Bruce Banner is the son of Dr. Brian Banner, an atomic physicist, and his wife
        Rebecca. Although Rebecca deeply loved Bruce, who returned her affection, Brian hated their child. Brian
        never wanted children because of what happened to him and his sisters Susan and Elaine Banner. An alcoholic,
        and a very, very angry man, Brian was driven by an insane jealousy of Bruce for being an object of Rebecca's
        love. Further, Brian believed that his radiation work had altered his DNA and given him a mutant son.[2] These
        factors led to Brian abusing Bruce physically. One of the people who helped Bruce cope with Brian's tantrums
        was his maternal cousin Jennifer Walters, with whom Bruce used to spend summers in the public library reading
        for hours, losing themselves to books.</string>
    <string name="ironman">Anthony Edward "Tony" Stark was a billionaire industrialist, a founding member of the
        Avengers, and the former CEO of Stark Industries. A brash but brilliant inventor, Stark was self-described
        as a genius, billionaire, playboy, and philanthropist. With his great wealth and exceptional technical
        knowledge, Stark was one of the world's most powerful men following the deaths of his parents and enjoyed
        the playboy lifestyle for many years until he was kidnapped by the Ten Rings in Afghanistan, while demonstrating
        a fleet of Jericho missiles. With his life on the line, Stark created an armored suit which he used to escape
        his captors. Upon returning home, he utilized several more armors to use against terrorists, as well as Obadiah
        Stane who turned against Stark. Stark enjoyed the fame that came with his new secret identity and decided
        to share it with the world, publicly revealing himself as Iron Man.</string>
    <string name="spiderman">Peter Benjamin Parker is a high school student who gained spider-like abilities,
        fighting crime across New York City as the alter ego Spider-Man, hoping someday, he will live up to his
        heroes in the Avengers. While Parker juggled all his continued superhero duties with the demands of his
        high-school life, he was approached by Tony Stark who recruited Spider-Man to join the Avengers Civil War,
        putting Spider-Man into the brief conflict with his personal hero, Captain America. Parker then agreed and
        was given his new suit as well as brand new Stark technology in exchange for all his help, although Stark
        still did not make him an official member of the Avengers and instead returned Parker back home to continue
        his own hero work.</string>
    <string name="starlord">Peter Jason Quill is a Celestial-human hybrid who was abducted from Earth in
        1988 by the Yondu Ravager Clan, and afterwards began building a reputation as the notorious intergalactic outlaw,
        nicknamed Star-Lord. In 2014, he decided to leave the Ravagers and operate individually, starting by stealing a
        precious artifact known as the Orb, unintentionally becoming a key player in the Quest for the Orb. Following his
        arrest, he forged an uneasy alliance with fellow inmates Gamora, Drax the Destroyer, Rocket Raccoon, and Groot, who t
        ogether formed the Guardians of the Galaxy. They first rallied as a team by stopping Ronan the Accuser from destroying
        Xandar with the Power Stone.</string>
    <string name="thor">Thor Odinson is the Asgardian God of Thunder, the former king of Asgard and New Asgard, and a founding
        member of the Avengers. When his irresponsible and impetuous behavior reignited a conflict between Asgard and Jotunheim,
        Thor was denied the right to become king, stripped of his power, and banished to Earth by Odin. While exiled on Earth,
        Thor learned humility, finding love with Jane Foster, and helped save his new friends from the Destroyer sent by Loki.
        Due to his selfless act of sacrifice, Thor redeemed himself in his father's eyes and was granted his power once more,
        which he then used to defeat Loki's schemes of genocide.</string>
</resources>
