<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:padding="@dimen/title_padding"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/MARVEL_LOGO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:contentDescription="@string/marvel_logo"
        app:srcCompat="@drawable/marvel_logo" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/start_margin_right"
        android:layout_marginRight="@dimen/start_margin_right"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/start_margin_right"
        android:layout_marginRight="@dimen/start_margin_right"
        android:text="@string/retry_button" />

    <ScrollView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textAlignment="center" />
    </ScrollView>

</LinearLayout>